# DigitalTwinPrototypes

./: README.md
.github/workflows/: build-arm32v7.yml  build-arm64v8.yml  build-x64.yml
IEEE Internet Computing/: README.md
PiCar-X/: .gitignore  Dockerfile  Dockerfile-arm32v7  Dockerfile-arm64v8  README.md  docker-compose-core-arm32v7.yml  docker-compose-core-arm64v8.yml  docker-compose-core.yml  docker-compose-ds.yml  docker-compose-dt.yml  docker-compose-dtp-ext-gazebo.yml  docker-compose-dtp-inttest.yml  docker-compose-dtp-no-gazebo.yml  docker-compose-dtp.yml  docker-compose-dtsim.yml  docker-compose-pt.yml  docker-compose-test.yml  docker-compose.yml  setup-gpio-i2c-emulation.bash
PiCar-X/core/: ENTRYPOINT.SH
PiCar-X/core/docker/: .bashrc  entrypoint.sh
PiCar-X/core/dtp/: CMakeLists.txt  LICENSE  README.md  package.xml
PiCar-X/core/dtp/config/: mosquitto.conf
PiCar-X/core/dtp/env/: picarx-arm64v8.env  picarx-dt.env  picarx.env  simulation-external.env  simulation.env
PiCar-X/core/dtp/launch/: simulation.launch  two_motors.launch
PiCar-X/core/picarx/: LICENSE  setup.py
PiCar-X/core/picarx/src/picarx/: __init__.py  adc.py  gpio.py  i2c.py  picarx.py  pwm.py  test.py
PiCar-X/core/picarx/src/picarx/drivers/: clutchgear.py  dcmotor.py  greyscale.py
PiCar-X/core/picarx/src/picarx/drivers/tests/: unittests.py
PiCar-X/core/picarx/src/picarx/emulators/: clutchgear.py  dcmotor.py
PiCar-X/core/picarx/src/picarx/interfaces/: actuators.py
PiCar-X/core/picarx/tests/: test_gpio.py
PiCar-X/picarx/: LICENSE  setup.py
PiCar-X/picarx/src/picarx/: gpio.py  i2c.py  pwm.py
PiCar-X/picarx/src/picarx/drivers/: __init__.py  dc_motor.py  servo.py
PiCar-X/picarx/src/picarx/emulators/: dc_motor.py  servo.py
PiCar-X/picarx/src/picarx/interfaces/: actuators.py
PiCar-X/picarx_description/: CMakeLists.txt  LICENSE  README.md  package.xml
PiCar-X/picarx_description/config/: picarx_control.yaml
PiCar-X/picarx_description/meshes/: LICENSE.txt  WheelFrontRight.dae
PiCar-X/picarx_description/urdf/picarx/: model.config  model.sdf  picarx.urdf
PiCar-X/picarx_gazebo/: CMakeLists.txt  README.md  package.xml
PiCar-X/picarx_gazebo/launch/: picarx-world.launch
PiCar-X/picarx_gazebo/models/: picarx.urdf
PiCar-X/ros/: Dockerfile-arches-mqtt-bridge
PiCar-X/ros/drivers/clutchgear/: CMakeLists.txt  Dockerfile  LICENSE  package.xml
PiCar-X/ros/drivers/clutchgear/launch/: ackermann_clutchgear_driver.launch  clutchgear_driver.launch
PiCar-X/ros/drivers/clutchgear/nodes/: ackermann_clutchgear.py  clutchgear_driver.py
PiCar-X/ros/drivers/clutchgear/tests/: docker-compose.yml  integration_tests.env  integration_tests.py  integration_tests.test  run_integrationtests.sh
PiCar-X/ros/drivers/dcmotor/: CMakeLists.txt  Dockerfile  package.xml  setup.py
PiCar-X/ros/drivers/dcmotor/docker/: entrypoint.sh
PiCar-X/ros/drivers/dcmotor/launch/: dcmotor_driver.launch  dcmotor_left.launch  dcmotor_right.launch
PiCar-X/ros/drivers/dcmotor/nodes/: dcmotor_driver.py
PiCar-X/ros/drivers/dcmotor/tests/: integration_tests.py  integration_tests.test
PiCar-X/ros/emulators/clutchgear/: CMakeLists.txt  Dockerfile  package.xml
PiCar-X/ros/emulators/clutchgear/launch/: ackermann_clutchgear_emulator.launch  clutchgear_emulator.launch
PiCar-X/ros/emulators/clutchgear/nodes/: ackermann_clutchgear_emulator.py  clutchgear_emulator.py
PiCar-X/ros/emulators/dcmotor/: CMakeLists.txt  Dockerfile  package.xml  setup.py
PiCar-X/ros/emulators/dcmotor/launch/: dcmotor_emulator.launch  dcmotor_emulator_left.launch  dcmotor_emulator_right.launch
PiCar-X/ros/emulators/dcmotor/nodes/: dcmotor_emulator.py
PiCar-X/ros/picarx_msgs/: CMakeLists.txt  package.xml  setup.py
PiCar-X/ros/picarx_msgs/msg/: ClutchGearStatus.msg  DCMotor.msg  Drive.msg  DriveStatus.msg  MotorStatus.msg  Test.msg
PiCar-X/ros/skills/ackermann_drive/: CMakeLists.txt  Dockerfile  package.xml  setup.py
PiCar-X/ros/skills/ackermann_drive/launch/: ackermann_skill.launch  monitor_ds.launch
PiCar-X/ros/skills/ackermann_drive/nodes/: ackermann_drive_skill.py  ackermann_monitor_ds.py
PiCar-X/ros/skills/ackermann_drive/src/picarx_ackermann_drive/: skill.py
PiCar-X/simulation/: Dockerfile
PiCar-X/simulation/picarx_control/: CMakeLists.txt  package.xml
PiCar-X/simulation/picarx_control/config/: picarx_control.yaml
PiCar-X/simulation/picarx_control/launch/: picarx_control.launch
PiCar-X/simulation/picarx_control/tests/: steering_integration_test.py
PiCar-X/simulation/picarx_description/: CMakeLists.txt  model.config  package.xml
PiCar-X/simulation/picarx_description/meshes/: Chassis.dae  README.md  WheelFrontLeft.dae  WheelRearLeft.dae  WheelRearRight.dae
PiCar-X/simulation/picarx_description/urdf/picarx/: model.sdf  picarx.urdf
PiCar-X/simulation/picarx_gazebo/: CMakeLists.txt  README.md  package.xml
PiCar-X/simulation/picarx_gazebo/launch/: picarx-world.launch
PiCar-X/simulation/picarx_gazebo/worlds/: picarx.world
examples/RS232-integration-test-simple/: .gitlab-ci.yml  README.md  docker-compose.yml
examples/RS232-integration-test-simple/simple_driver/: .gitignore  Dockerfile  README.md  setup.py
examples/RS232-integration-test-simple/simple_driver/docker/: entrypoint.sh
examples/RS232-integration-test-simple/simple_driver/src/simple_driver/: __init__.py  driver.py
examples/RS232-integration-test-simple/simple_driver/tests/: docker-compose.yml  integration-tests.py
examples/RS232-integration-test-simple/simple_emulator/: .dockerignore  Dockerfile  LICENSE  README.md  setup.py
examples/RS232-integration-test-simple/simple_emulator/docker/: entrypoint.sh
examples/RS232-integration-test-simple/simple_emulator/include/data/: tempdata.csv
examples/RS232-integration-test-simple/simple_emulator/src/simple_emulator/: emulator.py
