<?xml version="1.0"?>
<package format="2">
  <name>picarx_description</name>
  <version>0.0.0</version>
  <description>The picarx_description package</description>

  <maintainer email="abarbie@geomar.de">Alexander Barbie</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>effort_controllers</depend>
  <depend>tf2</depend>
  <depend>urdf</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>

  <export>

  </export>
</package>
