<?xml version="1.0"?>
<package format="2">
  <name>picarx_dtp</name>
  <version>0.0.0</version>
  <description>The picarx_dtp package to start up a DT or DTP</description>

  <maintainer email="abarbie@geomar.de">Alexander Barbie</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>picarx_msgs</exec_depend>


</package>