<?xml version="1.0"?>
<package format="2">
  <name>picarx_control</name>
  <version>0.0.0</version>
  <description>The picarx_control package to initialize the sensors/actuators in Gazebo</description>

  <maintainer email="alexanderbarbie@gmx.de">Alexander Barbie</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>effort_controllers</depend>


</package>