<?xml version="1.0"?>
<package format="2">
  <name>picarx_ackermann_drive</name>
  <version>0.0.0</version>
  <description>The picarx_ackermann_drive package helps to steer a PiCar-X. It connects to two motors and the servo motor that does the Ackermann steering</description>

  <maintainer email="alexanderbarbie@gmx.de">Alexander Barbie</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>picarx_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>


</package>